fix for places buttons displaying on tablets and v small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -430,6 +430,22 @@ footer {
     max-width:100%;
 }
 
+/*----------for places buttons on tables and very small screens--------------*/
+@media screen (max-width:750px) and (min-width:800px) {
+    .places-button {
+        padding: .3rem .8rem;
+        font-size: 1.15rem;
+    }
+}
+
+@media screen (max-width:320px) {
+    .places-button {
+        padding: .1rem .4rem;
+        font-size: 1rem;
+    }
+}
+
+
 
 /*-----------------------------------------------------------------------ITINERARY PAGE--------------------*/
 
